--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -263,7 +263,8 @@
 		{
 			var addreess : String = Location(msEvt.currentTarget).addreess;
 			
-			selectNecessaryItem(addreess);
+			showSelectedPage(addreess);
+//			selectNecessaryItem(addreess);
 			
 		}
 		
@@ -390,7 +391,7 @@
 	<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
 		<mx:Accordion id="accordion" width="155" height="100%" addedEffect="false" backgroundColor="#000000" color="#FFFFFF" >
 			<mx:Canvas label="Content" width="100%" height="100%" icon="@Embed('../assets/contents.png')">
-				<mx:Tree id="tree" width="100%" height="100%" color="#000000"   itemRenderer="TreeItemRender"
+				<mx:Tree id="tree" width="100%" height="100%" color="#000000"   	
 					labelField="@title" showRoot="true" change="{treeChangeHandler(event)}"  
 					folderOpenIcon="@Embed('../assets/open_folder.png')" folderClosedIcon="@Embed('../assets/close_folder.png')" 
 					defaultLeafIcon="@Embed('../assets/page.png')" /> 
