--- a/Help/Editor/v.01/src/AddProduct.mxml
+++ b/Help/Editor/v.01/src/AddProduct.mxml
@@ -25,6 +25,8 @@
 			import mx.managers.PopUpManager;
 			import mx.events.CloseEvent;
 			
+			private var sqlProxy:SQLProxy = new SQLProxy();
+			
 			
 			private function creationComplete():void 
 			{
@@ -56,6 +58,8 @@
 			
 			private function okHandler():void 
 			{
+				sqlProxy.creatDB();
+				sqlProxy.
 				dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
 			}
 			
@@ -69,19 +73,29 @@
 		
 	</mx:Script>
 	<mx:HBox width="100%" height="100%">
-		<mx:VBox label="Add Product" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10">
+		<mx:VBox label="Add Product" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10" right="0">
 			<mx:Label text="Product:"  fontSize="20"/>
-			<mx:Canvas width="100%" height="100%" >
+			<mx:VBox width="100%" height="100%"  >
 				
-				<mx:Label  x="17" y="13" text="Label:" />
-				<mx:TextInput id="productLabel" x="65" y="11" text="Label of product" width="211"/>
+				<mx:HBox right="0">
+					<mx:Label  x="17" y="13" text="Label:" />
+					<mx:TextInput id="productLabel" x="65" y="11" text="Label of product" width="211" />
+				</mx:HBox>
 				
-				<mx:Label x="18" y="42" text="Name:"/>
-				<mx:TextInput x="65" y="40" text="Like 'VDOM_IDE'" width="211"/>
+				<mx:HBox >
+					<mx:Label x="18" y="42" text="Name:"/>
+					<mx:TextInput x="65" y="40" text="Like 'VDOM_IDE'" width="211"/>
+				</mx:HBox >
+				
+				<mx:HBox >
+					<mx:Label x="18" y="42" text="Language:"/>
+					<mx:TextInput x="65" y="40" text="Like 'en_EN'" width="211"/>
+				</mx:HBox >
 				
 				<mx:Label x="10" y="74" text="Description:"/>
 				<mx:TextArea x="18" y="100" width="258" height="87"/>
-			</mx:Canvas>
+				
+			</mx:VBox>
 		</mx:VBox>
 	<mx:VBox horizontalAlign="center"   backgroundColor="#373739"
 			height="100%" paddingTop="2" paddingBottom="2" paddingLeft="10" paddingRight="10" color="#FFFFFF" >
