git-svn-id: http://svn.vdombox.ru/flextools/trunk@4555 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/vdom/components/main/mainClasses/VdomTitleBar.mxml
+++ b/IDE/v.01Core/src/vdom/components/main/mainClasses/VdomTitleBar.mxml
@@ -7,6 +7,7 @@
 	</mx:Metadata>
 	<mx:Script>
 		<![CDATA[
+			import mx.core.Window;
 			import vdom.managers.DataManager;
 			import mx.core.windowClasses.TitleBar;
 			import mx.core.WindowedApplication;
@@ -42,7 +43,7 @@
 
 			private function get window() : IWindow
 			{
-				return IWindow( Application.application );
+				return IWindow( Window.getWindow( this ) );
 			}
 
 			private static function isMac() : Boolean
