--- a/IDE/v.01Core/src/vdom/components/loginForm/LoginForm.mxml
+++ b/IDE/v.01Core/src/vdom/components/loginForm/LoginForm.mxml
@@ -2,7 +2,7 @@
 <mx:Canvas 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	
-	height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="100%"
+	height="600" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="800"
 	
 	creationComplete="creationCompleteHandler()" hide="hideHandler()" show="showHandler()"
 	mouseDown="mouseDownHandler(event)" mouseUp="mouseUpHandler(event)">
