--- a/IDE/v.01Core/src/vdom/components/main/Main.mxml
+++ b/IDE/v.01Core/src/vdom/components/main/Main.mxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Window 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
+<mx:Canvas 
+	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:containers="vdom.containers.*"
 	
-	id="main"
+	height="100%" width="100%"
 	
-	height="100%" layout="absolute" width="100%"
-	
-	show="showMainHandler()">
-	<vdomTitleBar:VdomTitleBar 
+	show="showMainHandler()" xmlns:mainClasses="vdom.components.main.mainClasses.*">
+	<mx:Script 
+		source="includes/main.as"/>
+	<mainClasses:VdomTitleBar
 		left="0" right="0"
 		logout="logoutHandler()"/>
 	<mx:HBox 
@@ -54,4 +54,4 @@
 	</mx:ViewStack>
 	<mx:Image 
 		height="62" source="{vdomLogo}" width="62" x="10" y="10"/>
-</mx:Window>
+</mx:Canvas>
