--- a/IDE/v.01Core/src/vdom/components/main/Main.mxml
+++ b/IDE/v.01Core/src/vdom/components/main/Main.mxml
@@ -2,12 +2,16 @@
 <mx:Canvas 
 	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:containers="vdom.containers.*"
 	
-	height="100%" width="100%"
+	creationPolicy="all"
 	
-	show="showMainHandler()" xmlns:mainClasses="vdom.components.main.mainClasses.*">
+	height="100%" minHeight="800" minWidth="1000" width="100%"
+	
+	show="showMainHandler()"
+	add="aaa( event )"
+	xmlns:mainClasses="vdom.components.main.mainClasses.*" xmlns:ns1="vdom.*">
 	<mx:Script 
 		source="includes/main.as"/>
-	<mainClasses:VdomTitleBar
+	<mainClasses:VdomTitleBar 
 		left="0" right="0"
 		logout="logoutHandler()"/>
 	<mx:HBox 
@@ -32,25 +36,31 @@
 	<mx:ViewStack 
 		id="contentStack"
 		
-		backgroundColor="#FFFFFF" borderColor="#000000" borderStyle="solid" bottom="0"
+		backgroundColor="#FFFFFF" borderColor="#000000" borderStyle="none" bottom="0"
 		left="0" paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
 		right="0" top="50">
 		<mx:Canvas 
 			styleName="vdomBackground"
 			
-			borderColor="#000000" borderStyle="solid" dropShadowEnabled="true"/>
-		<containers:MainTabNavigator 
-			id="moduleTabNavigator"
-			
-			borderStyle="none" bottom="5" left="5" right="5" top="5"
-			tabHeight="25" tabPaddingLeft="80">
-			<!--<modules:ApplicationManagment id="applicationManagmentModule"
-				 label="{resourceManager.getString('Application','main_title')}"/>
+			borderColor="#000000" borderStyle="solid" dropShadowEnabled="true">
+			<ns1:MyLoader 
+				horizontalCenter="0" verticalCenter="0"/>
+		</mx:Canvas>
+		<mx:Canvas>
+			<mx:TabBar id="testID" width="100%"/>
+			<containers:MainTabNavigator 
+				id="moduleTabNavigator"
+				
+				borderStyle="none" bottom="5" left="5" right="5" top="5"
+				tabHeight="25" tabPaddingLeft="80">
+				<!--<modules:ApplicationManagment id="applicationManagmentModule"
+					 label="{resourceManager.getString('Application','main_title')}"/>
 
-				 <modules:Editor id="editorModule"
-				 label="{resourceManager.getString('Application','editor_title')}"
-				 width="100%" height="100%"/>-->
-		</containers:MainTabNavigator>
+					 <modules:Editor id="editorModule"
+					 label="{resourceManager.getString('Application','editor_title')}"
+					 width="100%" height="100%"/>-->
+			</containers:MainTabNavigator>
+		</mx:Canvas>
 	</mx:ViewStack>
 	<mx:Image 
 		height="62" source="{vdomLogo}" width="62" x="10" y="10"/>
