--- a/IDE/v.01/vdom/modules/Editor.mxml
+++ b/IDE/v.01/vdom/modules/Editor.mxml
@@ -87,7 +87,7 @@
 		
 		<edit:Edit id="editorCanv" width="100%" height="100%"/>
 		
-		<scriptEditor:scriptEditor id="scriptCanv" width="100%" height="100%" />
+		<scriptEditor:ScriptEditor id="scriptCanv" width="100%" height="100%" />
 			
 		<treeEditor:TreeEditor id="treeCanv" width="100%" height="100%" />
 		
