git-svn-id: http://svn.vdombox.ru/flextools/trunk@4649 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/VdomIDE.mxml
+++ b/IDE/v.01Core/src/VdomIDE.mxml
@@ -7,8 +7,8 @@
 	creationPolicy="all" frameRate="30" layout="absolute" showGripper="false" showStatusBar="false"
 	showTitleBar="false" verticalScrollPolicy="off"
 	
-	creationComplete="creationCompleteHandler()" invoke="invokeHandler( event )"
-	preinitialize="preinitalizeHandler()" windowComplete="windowCompleteHandler()">
+	applicationComplete="applicationCompleteHandler()" creationComplete="creationCompleteHandler()"
+	invoke="invokeHandler( event )" preinitialize="preinitalizeHandler()">
 	<mx:Script 
 		source="vdomIDE.as"/>
 	<mx:Metadata>
