git-svn-id: http://svn.vdombox.ru/flextools/trunk@4721 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/JSEditor/src/XMLScriptEditor.mxml
+++ b/IDE/JSEditor/src/XMLScriptEditor.mxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:HTML xmlns:mx="http://www.adobe.com/2006/mxml"
-	location="exemple_full.html" initialize="initalize()">
+	location="exemple_full.html" initialize="initalize()" >
 	<mx:Script>
 		<![CDATA[
 			private function initalize() : void
 			{
 				addEventListener( "windowLoaded", zzz );
+				this.domWindow.test = test;
 			}
 			private function zzz( event : Event ) : void
 			{
 				var d : * = "";	
+			}
+			
+			private function test( ... arg ) : void
+			{
+				var d : * = ""
 			}
 		]]>
 	</mx:Script>
