--- a/IDE/JSEditor/src/edit_area/edit_area.css
+++ b/IDE/JSEditor/src/edit_area/edit_area.css
@@ -38,11 +38,11 @@ body, html, table, form, textarea{
 	padding: 0 5px 0 45px;
 	/*padding-right: 5px;*/ 
 }
-
+/* <-- */
 #textarea{
 	position: relative; 
 	top: 0; 
-	left: 0;
+	left: -3px;
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -118,9 +118,9 @@ pre{
 	margin: 0;
 	padding: 0;
 }
-
+/* <-- */
 .hidden{
-	opacity: 0.0; 
+	opacity: 0.5; 
 	filter:alpha(opacity=20);
 }
 
