--- a/IDE/JSEditor/src/ScriptEditor.mxml
+++ b/IDE/JSEditor/src/ScriptEditor.mxml
@@ -4,43 +4,46 @@
 	
 	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
-	initialize="initalize()"
-	
-	htmlDOMInitialize="complete()" uncaughtScriptException="ddd(event)" >
-	<mx:Script source="includes/scriptEditor.as" />
+	initialize="initalizeHandler()"
+	htmlDOMInitialize="completeHandler()">
+	<mx:htmlText>
+<![CDATA[
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>EditArea - the code editor in a textarea</title>
+	<script language="Javascript" type="text/javascript" src="app:/edit_area/edit_area_loader.js"></script>
+	<script language="Javascript" type="text/javascript" src="app:/AIRAliases.js"></script>
+</head>
+<body>
+<form action="" method="post">
+	<textarea id="code_editor" style="height: 100%; width: 100%;"></textarea>
+</form>
+</body>
+</html>
+]]>
+	</mx:htmlText>
+
 	<mx:Script>
 		<![CDATA[
-		private function ddd(event : Event) : void
-		{
-			var d : * = "";
-		}
 			private const ID : String = "code_editor";
-			
+
 			private var editAreaLoader : *;
-			
+
 			public function get script() : String
 			{
-				if(editAreaLoader)
+				if ( editAreaLoader )
 					return editAreaLoader.getValue( ID );
 				else
 					return null;
 			}
-			
-			private function initalize() : void
-			{
-				this.htmlText = initHTML;
-			}
-			
-			private function complete() : void
-			{
-				domWindow.test = test;
-				domWindow.window.onload = load;				
-			}
-			private function load( ...arg ) : void
+
+			private function load( ... arg ) : void
 			{
 				editAreaLoader = domWindow.editAreaLoader;
-				
-				if( !editAreaLoader )
+
+				if ( !editAreaLoader )
 					return;
 				
 				editAreaLoader.init( {
@@ -54,34 +57,28 @@
 					save_callback: save_code, 
 					syntax: "python" 
 				} );
-				
 			}
 			
 			private function save_code( id : String, content : String ) : void
 			{
 				var d : * = "";
 			}
-			
+
 			private function test( ... arg ) : void
 			{
 				var d : * = ""
 			}
-
-//			editAreaLoader.init({
-//			id: "code_editor"	// id of the textarea to transform		
-//			,start_highlight: true	// if start with highlight
-//			,font_family: "verdana, monospace"
-//			,toolbar: "save, |, search, go_to_line, |, undo, redo, |, select_font, |, change_smooth_selection, highlight, |, help"
-//			,allow_resize: "none"
-//			,allow_toggle: false
-//			,language: "ru"
-//			,save_callback: "save_code"
-//			,syntax: "python"
-//		});
-//		
-//		function save_code(id, content){
-//			alert("Here is the content of the EditArea '"+ id +"' as received by the save callback function:\n"+content);
-//		}
+			
+			private function initalizeHandler() : void
+			{
+				htmlLoader.placeLoadStringContentInApplicationSandbox = true;
+			}
+			
+			private function completeHandler() : void
+			{
+				domWindow.test = test;
+				domWindow.window.onload = load;
+			}
 		]]>
 	</mx:Script>
 </mx:HTML>
