git-svn-id: http://svn.vdombox.ru/flextools/trunk@4733 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/JSEditor/src/ScriptEditor.mxml
+++ b/IDE/JSEditor/src/ScriptEditor.mxml
@@ -14,7 +14,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>EditArea - the code editor in a textarea</title>
 	<script language="Javascript" type="text/javascript" src="app:/edit_area/edit_area_loader.js"></script>
-	<script language="Javascript" type="text/javascript" src="app:/AIRAliases.js"></script>
+	<script language="Javascript" type="text/javascript" src="app:/edit_area/AIRAliases.js"></script>
 </head>
 <body>
 <form action="" method="post">
