bug fix for edit area.
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4741 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/scriptEditor/ScriptEditor.mxml
+++ b/IDE/v.01/vdom/components/scriptEditor/ScriptEditor.mxml
@@ -13,7 +13,7 @@
 	<controls:EditArea
 		id="editArea"
 		
-		height="100%" text="same Text of code" width="100%"
+		height="100%" content="same Text of code" width="100%"
 		keyDown="textEditor_keyDownHandler( event )"/>
 	<mx:VDividedBox 
 		id="panels"
