--- a/IDE/v.01/vdom/controls/EditArea.mxml
+++ b/IDE/v.01/vdom/controls/EditArea.mxml
@@ -4,45 +4,34 @@
 	
 	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
-	initialize="initalizeHandler()"
+	preinitialize="initalizeHandler()"
 	htmlDOMInitialize="completeHandler()">
-	<mx:htmlText>
-<![CDATA[
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>EditArea - the code editor in a textarea</title>
-	<script language="Javascript" type="text/javascript" src="app:/edit_area/edit_area_loader.js"></script>
-	<script language="Javascript" type="text/javascript" src="app:/edit_area/AIRAliases.js"></script>
-</head>
-<body>
-<form action="" method="post">
-	<textarea id="code_editor" style="height: 100%; width: 100%;"></textarea>
-</form>
-</body>
-</html>
-]]>
-	</mx:htmlText>
-
+	<mx:Metadata> 
+        [Event(name="save", type="vdom.events.EditAreaEvent")] 
+    </mx:Metadata>
 	<mx:Script>
 		<![CDATA[
 			private const ID : String = "code_editor";
-
+			private const BASE_URL : String = "app-storage:/libs/edit_area/";
 			private var editAreaLoader : *;
 
-			public function get script() : String
+			public function get content() : String
 			{
 				if ( editAreaLoader )
 					return editAreaLoader.getValue( ID );
 				else
 					return null;
 			}
-
+			
+			public function set content( value : String ) : void
+			{
+				if ( editAreaLoader )
+					editAreaLoader.setValue( ID, value );
+			}
+			
 			private function load( ... arg ) : void
 			{
 				editAreaLoader = domWindow.editAreaLoader;
-
 				if ( !editAreaLoader )
 					return;
 				
@@ -53,7 +42,7 @@
 					toolbar: "save, |, search, go_to_line, |, undo, redo, |, select_font, |, change_smooth_selection, highlight, |, help", 
 					allow_resize: "none", 
 					allow_toggle: false, 
-					language: "ru", 
+					language: "en", 
 					save_callback: save_code, 
 					syntax: "python" 
 				} );
@@ -63,20 +52,58 @@
 			{
 				var d : * = "";
 			}
-
-			private function test( ... arg ) : void
+			
+			private function getTemplateString() : String
 			{
-				var d : * = ""
+				var template : String = "";
+				
+				try
+				{
+					var file : File = new File( BASE_URL + "template.html");
+					var fs : FileStream = new FileStream();
+					fs.open( file, FileMode.READ );
+					template = fs.readUTFBytes( fs.bytesAvailable );
+				}
+				catch( error : Error ){}
+				
+				return template;
+			}
+			
+			private function saveCompiledTemplate( path : String, content : String ) : Boolean
+			{
+				try
+				{
+					var file : File = new File( path );
+					var fs : FileStream = new FileStream();
+					fs.open( file, FileMode.WRITE);
+					fs.writeUTFBytes( content );
+				}
+				catch( error : Error )
+				{
+					return false;
+				}
+				return true;
 			}
 			
 			private function initalizeHandler() : void
 			{
-				htmlLoader.placeLoadStringContentInApplicationSandbox = true;
+				var file : File  = new File( BASE_URL );
+				
+				if( !file.exists )
+				{
+					var fileApp : File = new File("app:/libs/edit_area");
+					if( fileApp.exists )
+					{
+						fileApp.copyTo( file, true );
+					}
+				}
+				location= BASE_URL + "init.html"
 			}
 			
 			private function completeHandler() : void
-			{
-				domWindow.test = test;
+			{	
+				domWindow.getTemplateString = getTemplateString;
+				domWindow.saveCompiledTemplate = saveCompiledTemplate;
 				domWindow.window.onload = load;
 			}
 		]]>
