git-svn-id: http://svn.vdombox.ru/flextools/trunk@4742 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/JSEditor/src/ScriptEditor.mxml
+++ b/IDE/JSEditor/src/ScriptEditor.mxml
@@ -6,6 +6,9 @@
 	
 	preinitialize="initalizeHandler()"
 	htmlDOMInitialize="completeHandler()">
+	<mx:Metadata> 
+        [Event(name="save", type="vdom.events.EditAreaEvent")] 
+    </mx:Metadata>
 	<mx:Script>
 		<![CDATA[
 			private const ID : String = "code_editor";
